Code smell fix
use Long.valueOf() instead since  Long(long) is depricated