@@ -36,7 +36,7 @@ public class MobileTerminalEntityToModelMapper {
         model.setType(entity.getMobileTerminalType().name());
         model.setInactive(!entity.getActive());
         model.setArchived(entity.getArchived());
-        model.setId(new Long(entity.getCreateTime().getEpochSecond()).intValue());
+        model.setId(Long.valueOf(entity.getCreateTime().getEpochSecond()).intValue());
 
         model.getChannels().addAll(ChannelMapper.mapChannels(entity));
 
